more base styles and storybook setup

--- a/packages/ray/lib/typography.scss
+++ b/packages/ray/lib/typography.scss
@@ -1,45 +1,15 @@
-.title0 {
-  font-size: 1.75rem;
-  line-height: 36px;
-  font-weight: 600;
-  margin-bottom: 10px;
+p {
+  margin: 0 0 10px;
 
-  @include tablet {
-    font-size: 54px;
-    line-height: 62px;
-    margin-bottom: 20px;
+  &:last-child {
+    margin-bottom: 0;
   }
 }
 
-.title1 {
-  font-size: 24px;
-  line-height: 32px;
-  font-weight: 600;
-  margin-bottom: 10px;
-
-  @include tablet {
-    font-size: 34px;
-    line-height: 42px;
-  }
-}
-
-.title2 {
-  font-size: 18px;
-  line-height: 26px;
-  font-weight: 600;
-  margin-bottom: 5px;
-
-  @include tablet {
-    font-size: 24px;
-    line-height: 32px;
-    margin-bottom: 10px;
-  }
-}
-
-.title3 {
+.h4 {
   font-size: 16px;
-  line-height: 26px;
   font-weight: 600;
+  line-height: 26px;
   margin-bottom: 5px;
 
   @include tablet {
@@ -48,43 +18,74 @@
   }
 }
 
-.title4 {
-  font-size: 14px;
-  line-height: 22px;
+.h3 {
+  font-size: 18px;
   font-weight: 600;
-  margin-bottom: 5px;
+  line-height: 28px;
+  margin-bottom: 10px;
+
+  @include tablet {
+    font-size: 40px;
+    line-height: 56px;
+  }
 }
 
-.copy1 {
-  font-weight: 300;
+.h2 {
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 56px;
+  margin-bottom: 10px;
+
+  @include tablet {
+    font-size: 48px;
+    line-height: 72px;
+  }
+}
+
+.h1 {
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 72px;
+  margin-bottom: 20px;
+
+  @include tablet {
+    font-size: 56px;
+    line-height: 80px;
+  }
+}
+
+.h0 {
+  font-size: 56px;
+  font-weight: 400;
+  line-height: 80px;
+  margin-bottom: 20px;
+
+  @include tablet {
+    font-size: 64px;
+    line-height: 96px;
+  }
+}
+
+.p1 {
+  font-weight: 400;
   font-size: 20px;
   line-height: 32px;
-
-  @include tablet {
-    font-size: 24px;
-    line-height: 36px;
-  }
 }
 
-.copy2 {
-  font-weight: 300;
+.p2 {
+  font-weight: 400;
   font-size: 16px;
-  line-height: 26px;
-
-  @include tablet {
-    font-size: 18px;
-    line-height: 28px;
-  }
+  line-height: 28px;
 }
 
-.copy3 {
-  font-weight: 300;
+.p3 {
+  font-weight: 400;
   font-size: 14px;
   line-height: 22px;
 }
 
-.copy4 {
-  font-weight: 300;
+.p4 {
+  font-weight: 400;
   font-size: 12px;
   line-height: 20px;
 }
