--- a/packages/ray/lib/base.scss
+++ b/packages/ray/lib/base.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: $font-stack;
+  font-family: $font-stack-sans-serif;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -12,15 +12,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   line-height: 1.6666666666666667;
-  color: #000;
-  font-weight: 300;
+  color: $black70;
+  font-weight: 400;
   font-size: 16px;
-  line-height: 26px;
-
-  @include tablet {
-    font-size: 18px;
-    line-height: 28px;
-  }
+  line-height: 28px;
 }
 
 * {
