--- a/packages/ray/lib/buttons.scss
+++ b/packages/ray/lib/buttons.scss
@@ -15,6 +15,7 @@ $font-size: 1rem !default;
   padding: 0.5625rem 1.5625rem;
   min-width: 120px;
   color: #fff;
+  height: 4rem;
 
   &:hover,
   &:focus {
