--- a/packages/ray/lib/forms.scss
+++ b/packages/ray/lib/forms.scss
@@ -4,37 +4,40 @@ fieldset {
   border: 0;
 
   &:not(:last-of-type) {
-    margin-bottom: 0.75rem;
+    margin-bottom: 1.5rem;
   }
 }
 
 label {
-  font-size: 0.875rem;
-  line-height: 1.3;
-  font-weight: 600;
+  font-family: $font-stack-mono;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
   margin-bottom: 0.625rem;
   display: block;
+  text-transform: uppercase;
 }
 
 input {
-  font-family: $font-stack;
-  font-size: 1rem;
+  font-family: inherit;
+  font-size: 1.25rem;
   line-height: 1;
-  height: 2.75rem;
+  height: 4rem;
   display: block;
-  border-radius: 0.125rem;
-  border: 1px solid #dbdbdb;
-  padding: 0.8125rem 0.75rem;
+  border-radius: 0.25rem;
+  border: 2px solid $blue;
+  background-color: $white;
+  padding: 1rem 15px;
   width: 100%;
   outline: 0;
 
   &:focus {
-    border-color: #ffd16d;
+    border-color: $blue20;
   }
 }
 
 .hint {
-  @extend .copy4;
+  @extend .p4;
   display: block;
   color: $gray80;
   font-weight: 400;
