--- a/packages/ray/lib/variables.scss
+++ b/packages/ray/lib/variables.scss
@@ -1,50 +1,50 @@
 $font-stack-sans-serif: 'Apercu', Avenir, -apple-system, BlinkMacSystemFont,
-  'Helvetica Neue', Helvetica, 'Calibri', 'Roboto', Arial, sans-serif;
-$font-stack-mono: 'Apercu Mono', monospace;
+  'Helvetica Neue', Helvetica, 'Calibri', 'Roboto', Arial, sans-serif !default;
+$font-stack-mono: 'Apercu Mono', monospace !default;
 
-$mobile-px: 400px;
-$tablet-px: 600px;
-$desktop-px: 840px;
-$desktop-large-px: 1024px;
+$breakpoint-mobile-px: 400px !default;
+$breakpoint-tablet-px: 600px !default;
+$breakpoint-desktop-px: 840px !default;
+$breakpoint-desktop-large-px: 1024px !default;
 
-$black70: #000;
-$black60: #0d0e0e;
-$black50: #252729;
-$black40: #3d4144;
-$black30: #555a5f;
-$black20: #6e7479;
-$gray80: #747476;
-$gray70: #8e8e8f;
-$gray60: #a7a7a9;
-$gray50: #c1c1c2;
-$gray40: #dbdbdb;
-$gray35: #e7e7e9;
-$gray30: #f4f4f5;
-$white: #fff;
+$black70: #000 !default;
+$black60: #0d0e0e !default;
+$black50: #252729 !default;
+$black40: #3d4144 !default;
+$black30: #555a5f !default;
+$black20: #6e7479 !default;
+$gray80: #747476 !default;
+$gray70: #8e8e8f !default;
+$gray60: #a7a7a9 !default;
+$gray50: #c1c1c2 !default;
+$gray40: #dbdbdb !default;
+$gray35: #e7e7e9 !default;
+$gray30: #f4f4f5 !default;
+$white: #fff !default;
 
-$yellow80: #d39100;
-$yellow70: #ffb107;
-$yellow60: #ffc13a;
-$yellow50: #ffd16d;
-$yellow40: #ffe1a0;
-$yellow30: #fff1d3;
+$yellow80: #d39100 !default;
+$yellow70: #ffb107 !default;
+$yellow60: #ffc13a !default;
+$yellow50: #ffd16d !default;
+$yellow40: #ffe1a0 !default;
+$yellow30: #fff1d3 !default;
 
-$blue: #0000ff;
-$blue80: darken($blue, 30%);
-$blue70: darken($blue, 20%);
-$blue60: darken($blue, 10%);
-$blue50: $blue;
-$blue40: lighten($blue, 10%);
-$blue30: lighten($blue, 20%);
-$blue20: lighten($blue, 30%);
+$blue: #0000ff !default;
+$blue80: darken($blue, 30%) !default;
+$blue70: darken($blue, 20%) !default;
+$blue60: darken($blue, 10%) !default;
+$blue50: $blue !default;
+$blue40: lighten($blue, 10%) !default;
+$blue30: lighten($blue, 20%) !default;
+$blue20: lighten($blue, 30%) !default;
 
-$red80: #812020;
-$red70: #aa2a2a;
-$red60: #ce3939;
-$red50: #d86262;
-$red40: #e28b8b;
-$red30: #ecb4b4;
-$red20: #f6dddd;
+$red80: #812020 !default;
+$red70: #aa2a2a !default;
+$red60: #ce3939 !default;
+$red50: #d86262 !default;
+$red40: #e28b8b !default;
+$red30: #ecb4b4 !default;
+$red20: #f6dddd !default;
 
-$primary-color: $blue50;
-$secondary-color: $yellow50;
+$primary-color: $blue50 !default;
+$secondary-color: $yellow50 !default;
