--- a/packages/ray/lib/application.scss
+++ b/packages/ray/lib/application.scss
@@ -3,6 +3,7 @@
 @import '../node_modules/normalize.css';
 @import '../node_modules/bourbon-neat/core/neat';
 
+@import 'fonts';
 @import 'responsive';
 @import 'base';
 @import 'grid';
