--- a/packages/ray/lib/responsive.scss
+++ b/packages/ray/lib/responsive.scss
@@ -1,29 +1,23 @@
 @mixin mobile {
-  @media (min-width: #{$mobile-px}) {
-    @content;
-  }
-}
-
-@mixin phablet {
-  @media (min-width: #{$phablet-px}) {
+  @media (min-width: #{$breakpoint-mobile-px}) {
     @content;
   }
 }
 
 @mixin tablet {
-  @media (min-width: #{$tablet-px}) {
+  @media (min-width: #{$breakpoint-tablet-px}) {
     @content;
   }
 }
 
 @mixin desktop {
-  @media (min-width: #{$desktop-px}) {
+  @media (min-width: #{$breakpoint-desktop-px}) {
     @content;
   }
 }
 
 @mixin desktophd {
-  @media (min-width: #{$desktophd-px}) {
+  @media (min-width: #{$breakpoint-desktop-large-px}) {
     @content;
   }
 }
