grid example, better form stuff

--- a/packages/ray/lib/buttons.scss
+++ b/packages/ray/lib/buttons.scss
@@ -9,13 +9,13 @@ $font-size: 1rem !default;
   background-color: $bgColor;
   border-color: $bgColor;
   border-width: 0.125rem;
-  border-radius: 0.3125rem;
+  border-radius: $border-radius;
   border-style: solid;
   cursor: pointer;
   padding: 0.5625rem 1.5625rem;
   min-width: 120px;
-  color: #fff;
-  height: 4rem;
+  color: $white;
+  height: $field-height;
 
   &:hover,
   &:focus {
@@ -28,7 +28,7 @@ $font-size: 1rem !default;
     cursor: not-allowed;
     background-color: $gray50;
     border-color: $gray50;
-    color: #fff;
+    color: $white;
   }
 }
 
