--- a/packages/ray/lib/forms.scss
+++ b/packages/ray/lib/forms.scss
@@ -1,38 +1,57 @@
-fieldset {
-  padding: 0;
-  margin: 0;
-  border: 0;
+.field {
+  border: 1px solid $blue;
+  background-color: $white;
+  border-radius: $border-radius;
+  position: relative;
+  height: $field-height;
 
-  &:not(:last-of-type) {
+  &:not(:last-child) {
     margin-bottom: 1.5rem;
   }
 }
 
 label {
   font-family: $font-stack-mono;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-  margin-bottom: 0.625rem;
   display: block;
   text-transform: uppercase;
+  position: absolute;
+  left: 1rem;
+  top: 16px;
+  display: flex;
+  align-items: center;
+  color: $gray80;
+  transition: all 0.125s ease;
 }
 
 input {
   font-family: inherit;
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1;
-  height: 4rem;
+  height: 56px;
   display: block;
-  border-radius: 0.25rem;
-  border: 2px solid $blue;
-  background-color: $white;
-  padding: 1rem 15px;
+  background-color: transparent;
+  padding: 1rem 1rem 0;
   width: 100%;
+  height: 100%;
   outline: 0;
+  border: 0;
 
-  &:focus {
+  &:focus,
+  &:not(:placeholder-shown) {
     border-color: $blue20;
+
+    + label {
+      font-size: 12px;
+      top: 6px;
+      color: $gray60;
+    }
+  }
+
+  &::placeholder {
+    color: transparent;
   }
 }
 
