--- a/packages/ray/lib/grid.scss
+++ b/packages/ray/lib/grid.scss
@@ -1,3 +1,5 @@
+@import '../node_modules/bourbon-neat/core/neat';
+
 .container {
   @include grid-container;
   max-width: 1024px;
@@ -5,4 +7,8 @@
 
 .col-12 {
   @include grid-column(12);
+}
+
+.container--visual {
+  @include grid-visual;
 }
