--- a/packages/ray/lib/grid.scss
+++ b/packages/ray/lib/grid.scss
@@ -1,14 +1,15 @@
-@import '../node_modules/bourbon-neat/core/neat';
+// @import '~bourbon-neat/core/_neat';
 
-.container {
-  @include grid-container;
-  max-width: 1024px;
-}
+// .container {
+//   @include grid-container;
+//   max-width: 1320px;
+//   margin: 0 auto;
+// }
 
-.col-12 {
-  @include grid-column(12);
-}
+// .col-12 {
+//   @include grid-column(12);
+// }
 
-.container--visual {
-  @include grid-visual;
-}
+// .container--visual {
+//   @include grid-visual;
+// }
