--- a/packages/ray/lib/_variables.scss
+++ b/packages/ray/lib/_variables.scss
@@ -54,9 +54,19 @@ $primary-color: $blue50 !default;
 $secondary-color: $yellow50 !default;
 
 $field-height: 54px !default;
-$gutter: 24px;
 
-$neat-grid: (
-  columns: 12,
-  gutter: $gutter
+$grid-breakpoints: (
+  xs: 0,
+  sm: 480px,
+  md: 768px,
+  lg: 1024px
 );
+
+$container-max-widths: (
+  sm: 420px,
+  md: 720px,
+  lg: 1320px
+);
+
+$grid-columns: 12;
+$grid-gutter-width: 24px;
