--- a/packages/ray/lib/application.scss
+++ b/packages/ray/lib/application.scss
@@ -5,7 +5,7 @@
 @import 'fonts';
 @import 'responsive';
 @import 'base';
-// @import 'grid';
+@import 'grid';
 @import 'typography';
 @import 'forms';
 
