--- a/packages/ray/lib/_typography.scss
+++ b/packages/ray/lib/_typography.scss
@@ -1,93 +1,94 @@
-p {
-  margin: 0 0 34px;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.h4 {
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 26px;
-  margin-bottom: 5px;
-
-  @include tablet {
-    font-size: 20px;
-    line-height: 32px;
-  }
-}
-
-.h3 {
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 28px;
-  margin-bottom: 10px;
-
-  @include tablet {
-    font-size: 40px;
-    line-height: 56px;
-  }
-}
-
-.h2 {
-  font-size: 40px;
-  font-weight: 600;
-  line-height: 56px;
-  margin-bottom: 10px;
-
-  @include tablet {
-    font-size: 48px;
-    line-height: 72px;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-weight: bold;
+  margin: 0;
 }
 
 .h1 {
-  font-size: 48px;
-  font-weight: 600;
-  line-height: 72px;
-  margin-bottom: 20px;
-
-  @include tablet {
-    font-size: 56px;
-    line-height: 80px;
-  }
+  font-size: 4rem;
+  line-height: 96px;
+  margin-bottom: 1.5rem;
 }
 
-.h0 {
-  font-size: 56px;
-  font-weight: 400;
-  line-height: 80px;
-  margin-bottom: 20px;
+.h2 {
+  font-size: 3rem;
+  line-height: 72px;
+  margin-bottom: 1rem;
+}
 
-  @include tablet {
-    font-size: 64px;
-    line-height: 96px;
-  }
+.h3 {
+  font-size: 2.5rem;
+  line-height: 60px;
+  margin-bottom: 1rem;
+}
+
+.h4 {
+  font-size: 2rem;
+  line-height: 56px;
+  margin-bottom: 1rem;
+}
+
+.h5 {
+  font-size: 1.5rem;
+  line-height: 40px;
+  margin-bottom: 0.5rem;
+}
+
+.h6 {
+  font-size: 1.25rem;
+  line-height: 40px;
+  margin-bottom: 0.5rem;
+}
+
+p,
+.p1,
+.p2,
+.p3,
+.p4,
+.p5,
+.p6 {
+  font-weight: 400;
+  margin: 0;
 }
 
 .p1 {
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 32px;
+  font-size: 2rem;
+  line-height: 48px;
 }
 
 .p2 {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 28px;
+  font-size: 1.5rem;
+  line-height: 40px;
 }
 
 .p3 {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 22px;
+  font-size: 1.25rem;
+  line-height: 32px;
 }
 
 .p4 {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 20px;
+  font-size: 1rem;
+  line-height: 28px;
+}
+
+.p5 {
+  font-size: 0.875rem;
+  line-height: 24px;
+}
+
+.p6 {
+  font-size: 0.75rem;
+  line-height: 12px;
 }
 
 .label {
