--- a/packages/ray/lib/_card.scss
+++ b/packages/ray/lib/_card.scss
@@ -1,14 +1,20 @@
 $card-padding: 1rem;
-$card-border-color: #e6e6e6;
+$card-border-color: $gray35;
 
 .card {
   width: 100%;
-  border: 1px solid $card-border-color;
   border-radius: $border-radius;
   background-color: $white;
   overflow: hidden;
 
   &__content {
     padding: $card-padding;
+    border: 1px solid $card-border-color;
+
+    &:not(:first-child) {
+      border-bottom-left-radius: $border-radius;
+      border-bottom-right-radius: $border-radius;
+      border-top: 0;
+    }
   }
 }
