--- a/packages/ray/lib/_image.scss
+++ b/packages/ray/lib/_image.scss
@@ -4,7 +4,7 @@
   height: auto;
   position: relative;
   overflow: hidden;
-  background-color: $gray35;
+  background-color: $color-gray35;
 
   img {
     position: absolute;
@@ -36,7 +36,7 @@
   display: block;
   width: 100%;
   height: auto;
-  background-color: $gray35;
+  background-color: $color-gray35;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
