--- a/packages/ray/lib/_base.scss
+++ b/packages/ray/lib/_base.scss
@@ -4,6 +4,7 @@ html {
 
 body {
   font-family: $font-stack-sans-serif;
+  color: $color-text-dark;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -12,7 +13,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   line-height: 1.6666666666666667;
-  color: $black70;
   font-weight: 400;
   font-size: 16px;
   line-height: 28px;
@@ -24,7 +24,7 @@ body {
 
 a {
   text-decoration: none;
-  color: $blue50;
+  color: $color-blue50;
 
   &:hover,
   &:focus {
