--- a/packages/ray/lib/_variables.scss
+++ b/packages/ray/lib/_variables.scss
@@ -58,7 +58,8 @@ $grid-breakpoints: (
 $container-max-widths: (
   sm: 420px,
   md: 720px,
-  lg: 1320px
+  lg: 1320px,
+  xl: 1320px
 );
 
 $grid-columns: 12;
