--- a/packages/ray/lib/_tabs.scss
+++ b/packages/ray/lib/_tabs.scss
@@ -13,7 +13,7 @@ $tabs-border-size: 1px;
     min-width: 200px;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    margin-bottom: -$tabs-border-size;
+    margin-bottom: -$tabs-border-size !important;
 
     &:hover {
       background-color: $color-blue01;
