--- a/packages/ray/lib/_buttons.scss
+++ b/packages/ray/lib/_buttons.scss
@@ -6,9 +6,8 @@ $btn-border-radius: $border-radius;
   font-weight: 400;
   line-height: 1;
   display: inline-block;
-  border-width: 1px;
+  border: 1px solid $color-blue50;
   border-radius: $btn-border-radius;
-  border-style: solid;
   cursor: pointer;
   padding: 20px 24px;
   min-width: 120px;
@@ -33,22 +32,39 @@ $btn-border-radius: $border-radius;
 
   &:hover {
     background-color: $color-blue60;
+    border-color: $color-blue60;
   }
 
   &:focus {
     background-color: $color-blue70;
+    border-color: $color-blue70;
   }
 
   &[disabled] {
     background-color: $color-blue30;
+    border-color: $color-blue30;
     color: rgba($white, 0.4);
+  }
+
+  &Danger {
+    background-color: $color-red;
+    border-color: $color-red;
+
+    &:hover {
+      background-color: $color-red60;
+      border-color: $color-red60;
+    }
+
+    &:focus {
+      background-color: $color-red70;
+      border-color: $color-red70;
+    }
   }
 }
 
 .#{$prefix}btn--secondary {
   color: $color-blue50;
   background-color: $white;
-  border-color: $color-blue50;
 
   &:hover {
     background-color: $color-blue10;
@@ -63,10 +79,53 @@ $btn-border-radius: $border-radius;
     border-color: rgba($color-blue50, 0.4);
     color: rgba($color-blue50, 0.4);
   }
+
+  &Danger {
+    border-color: $color-red;
+    color: $color-red;
+
+    &:hover {
+      background-color: $color-red10;
+    }
+
+    &:focus {
+      background-color: $color-red20;
+    }
+  }
 }
 
 .#{$prefix}btn--compact {
   padding: 0.75rem;
   line-height: 1;
   height: auto;
+}
+
+.#{$prefix}btn--tertiary {
+  color: $color-blue50;
+  background-color: transparent;
+  border-color: transparent;
+
+  &:hover {
+    color: $color-blue60;
+  }
+
+  &:focus {
+    color: $color-blue70;
+  }
+
+  &[disabled] {
+    color: rgba($color-blue50, 0.4);
+  }
+
+  &Danger {
+    color: $color-red;
+
+    &:hover {
+      color: $color-red60;
+    }
+
+    &:focus {
+      color: $color-red70;
+    }
+  }
 }
