fix(build): Remove sass-loader dep for scss files (#7)

--- a/packages/ray/lib/_grid.scss
+++ b/packages/ray/lib/_grid.scss
@@ -1,4 +1,4 @@
 /*
 * https://getbootstrap.com/docs/4.0/layout/grid/#mixins 
 */
-@import '~bootstrap/scss/bootstrap-grid';
+@import '../node_modules/bootstrap/scss/bootstrap-grid';
