fix(fonts): Disable fonts (#11)

--- a/packages/ray/lib/application.scss
+++ b/packages/ray/lib/application.scss
@@ -2,7 +2,7 @@
 
 @import '../node_modules/normalize.css/normalize';
 
-@import 'fonts';
+// @import 'fonts';
 @import 'responsive';
 @import 'base';
 @import 'grid';
