fix(buttons): Moves around buttons and adds more html examples (#12)

--- a/packages/ray/lib/application.scss
+++ b/packages/ray/lib/application.scss
@@ -10,7 +10,7 @@
 @import 'forms';
 @import 'card';
 @import 'image';
-@import 'buttons';
+@import './components/button/button';
 @import 'table';
 @import 'section';
 @import 'tabs';
