--- a/packages/ray/lib/components/button/button--primary.html
+++ b/packages/ray/lib/components/button/button--primary.html
@@ -1,1 +1,6 @@
 <button class="ray--btn ray--btn--primary">Click Me</button>
+<button class="ray--btn ray--btn--primary" disabled>Click Me</button>
+<button class="ray--btn ray--btn--primary ray--btn--compact">Click Me</button>
+<button class="ray--btn ray--btn--primary ray--btn--compact" disabled>
+  Click Me
+</button>
