--- a/packages/ray/lib/_base.scss
+++ b/packages/ray/lib/_base.scss
@@ -22,6 +22,10 @@ body {
   box-sizing: border-box;
 }
 
+[disabled] {
+  cursor: not-allowed;
+}
+
 a {
   text-decoration: none;
   color: $color-blue50;
