--- a/packages/ray/lib/_variables.scss
+++ b/packages/ray/lib/_variables.scss
@@ -58,6 +58,18 @@ $color-red20: lighten($color-red, 30%) !default;
 $color-red10: lighten($color-red, 40%) !default;
 $color-red01: lighten($color-red, 49%) !default;
 
+$color-green: #00cc00;
+$color-green90: darken($color-green, 40%) !default;
+$color-green80: darken($color-green, 30%) !default;
+$color-green70: darken($color-green, 20%) !default;
+$color-green60: darken($color-green, 10%) !default;
+$color-green50: $color-green !default;
+$color-green40: lighten($color-green, 10%) !default;
+$color-green30: lighten($color-green, 20%) !default;
+$color-green20: lighten($color-green, 30%) !default;
+$color-green10: lighten($color-green, 40%) !default;
+$color-green01: lighten($color-green, 49%) !default;
+
 $color-text-light: #b0b0b0;
 $color-text-medium: #666666;
 $color-text-dark: #000000;
@@ -65,7 +77,14 @@ $color-text-dark: #000000;
 $color-primary: $color-blue50 !default;
 $color-secondary: $color-yellow50 !default;
 
-$field-height: 54px !default;
+$field-v-spacing: 20px;
+$field-v-spacing-compact: 12px;
+$field-h-spacing: 12px;
+$field-label-size: 1rem;
+$field-label-size-focus: 12px;
+$field-border-width: 1px;
+$field-height: calc((#{$field-v-spacing} * 2) + 1rem);
+$field-height-compact: calc((#{$field-v-spacing-compact} * 2) + 1rem);
 
 $grid-breakpoints: (
   xs: 0,
