chore: Fixes a warning (#14)

--- a/packages/ray/lib/application.scss
+++ b/packages/ray/lib/application.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-@import '../node_modules/normalize.css/normalize';
+@import '../node_modules/normalize.css/normalize.css';
 
 // @import 'fonts';
 @import 'responsive';
