fix(grid): Fixes maxwidths and gutters, adds storybook example (#13)
* fix(grid): Fixes maxwidths and gutters, adds storybook example

* tweaks

* adds fancy colors

* prefix classes

* prefix grid classes

--- a/packages/ray/lib/application.scss
+++ b/packages/ray/lib/application.scss
@@ -1,11 +1,11 @@
-@import 'variables';
+@import './global/variables';
 
 @import '../node_modules/normalize.css/normalize.css';
 
 // @import 'fonts';
 @import 'responsive';
 @import 'base';
-@import 'grid';
+@import './components/grid/bootstrap-grid';
 @import 'typography';
 @import 'forms';
 @import 'card';
