chore: Extract normalize.css out of node_modules

--- a/packages/ray/lib/application.scss
+++ b/packages/ray/lib/application.scss
@@ -1,6 +1,5 @@
 @import './global/variables';
-
-@import '../node_modules/normalize.css/normalize.css';
+@import './global/normalize';
 
 // @import 'fonts';
 @import 'responsive';
