--- a/packages/ray/lib/_forms.scss
+++ b/packages/ray/lib/_forms.scss
@@ -5,7 +5,7 @@
 }
 
 .#{$prefix}field {
-  border: $field-border-width solid $color-gray35;
+  border: $border-width solid $color-gray35;
   background-color: $color-white;
   border-radius: $border-radius;
   position: relative;
@@ -49,7 +49,7 @@
     &:not(:placeholder-shown) {
       + label {
         font-size: $field-label-size-focus;
-        top: $field-h-spacing - $field-border-width;
+        top: $field-h-spacing - $border-width;
       }
     }
 
@@ -77,7 +77,7 @@
 
     label {
       font-size: $field-label-size-focus;
-      top: $field-h-spacing - $field-border-width;
+      top: $field-h-spacing - $border-width;
     }
 
     input::placeholder {
