--- a/packages/ray/lib/global/_typography.scss
+++ b/packages/ray/lib/global/_typography.scss
@@ -4,47 +4,53 @@ h3,
 h4,
 h5,
 h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
+.#{$prefix}--h1,
+.#{$prefix}--h2,
+.#{$prefix}--h3,
+.#{$prefix}--h4,
+.#{$prefix}--h5,
+.#{$prefix}--h6 {
   font-weight: bold;
   margin: 0;
 }
 
-.h1 {
+.h1,
+.#{$prefix}--h1 {
   font-size: 4rem;
   line-height: 96px;
   margin-bottom: 1.5rem;
 }
 
-.h2 {
+.h2,
+.#{$prefix}--h2 {
   font-size: 3rem;
   line-height: 72px;
   margin-bottom: 1rem;
 }
 
-.h3 {
+.h3,
+.#{$prefix}--h3 {
   font-size: 2.5rem;
   line-height: 60px;
   margin-bottom: 1rem;
 }
 
-.h4 {
+.h4,
+.#{$prefix}--h4 {
   font-size: 2rem;
   line-height: 56px;
   margin-bottom: 1rem;
 }
 
-.h5 {
+.h5,
+.#{$prefix}--h5 {
   font-size: 1.5rem;
   line-height: 40px;
   margin-bottom: 0.5rem;
 }
 
-.h6 {
+.h6,
+.#{$prefix}--h6 {
   font-size: 1.25rem;
   line-height: 40px;
   margin-bottom: 0.5rem;
