fix: Typography classes (#21)
* fix: Typography classes

* dynamic extend class

* Update stories/grid.stories.js

Co-Authored-By: adamraider <adamjraider@gmail.com>

* update copy

* remove duplicate story

--- a/packages/ray/lib/_tabs.scss
+++ b/packages/ray/lib/_tabs.scss
@@ -5,7 +5,7 @@ $tabs-border-size: 1px;
   display: flex;
 
   &__item {
-    @extend .p3;
+    @extend .#{$prefix}p3;
     display: block;
     cursor: pointer;
     color: $color-blue50;
